syntax = "proto3";
package bank;

import "google/api/annotations.proto";

message Account {
  int32 id = 1;
  int32 client_id = 2;
  int64 balance = 3;
}

message RequestById {
  int32 id = 1;
}

message ResponseAccount {
  repeated Account result = 1;
}

service BankService {
    rpc ListAccounts(RequestById) returns (ResponseAccount) {
        option (google.api.http) = {
            get: "/accounts"
        };
    }

    rpc ReadAccount(RequestById) returns (ResponseAccount) {
        option (google.api.http) = {
            get: "/accounts/{id}"
        };
    }
}
